# EmbedC-Learning

./: ReadMe.md
000_blink_windows/: 000_blink_windows.c  CMakeLists.txt
00_Blink/: CMakeLists.txt  blink.c
01_ws2812/: CMakeLists.txt  ReadMe.md  ws2812.c  ws2812_parallel.c
GeneralSensor_IO_test/00_FirstCode/: 00_FirstCode.c  CMakeLists.txt
devops_scripts/: enterapp.py  enterboot.py  logger.py
mcutool/: mcutool.py
mcutool/tools/: argparse_handler.py  enterapp.py  enterboot.py  logger.py
pio_ws2812/: CMakeLists.txt  ws2812.c  ws2812.pio  ws2812_parallel.c
rtos_arm_quadrature_IX/: CMakeLists.txt  ReadMe.md  rtos_arm_quadrature_IX.c
